force-app/main/default/objects/Medication_Drug_Disposal__c/Medication_Drug_Disposal__c.object-meta.xml
<CustomObject>
    <label>Medication/Drug Disposal</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Disposal #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication/Drug Disposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>