force-app/main/default/objects/Medication_Drug_Disposal__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medication/Drug Disposals</relationshipLabel>
    <relationshipName>Medication_Drug_Disposals</relationshipName>
    <type>Lookup</type>
</CustomField>