force-app/main/default/objects/Medication_Drug_Disposal__c/fields/Amount_Dispensed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Dispensed__c</fullName>
    <label>Amount Dispensed</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>