force-app/main/default/objects/Medication_Drug_Disposal__c/fields/Disposal_Method__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Method__c</fullName>
    <label>Disposal Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reverse Distributer</fullName>
            </value>
            <value>
                <fullName>Approved Disposal Site</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Incineration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>